# lyricstator

./: ANDROID_BUILD.md  BUILD.md  BUILD_DEPENDENCIES.md  BUILD_QT6.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_Qt6.txt  GUI_MIGRATION_OPTIONS.md  INSTALLER_README.md  LICENSE  Makefile  README.md  TGUI_INTEGRATION.md  build_env.sh  build_qt_android.sh  build_qt_desktop.sh  cqtdeployer.json  create_installer.sh.in  deploy_qt.sh.in  lyricstator.desktop.in  lyricstator.pro
.github/workflows/: build-android.yml  build-pc.yml
android/: gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/lyricstator/app/: MainActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
assets/: README.md
assets/resource_packs/neon/: pack.json
assets/resource_packs/retro/: pack.json
assets/samples/: test_song.lystr
cmake/: FindTGUI.cmake  aarch64-linux-gnu.cmake
resources/: resources.qrc
samples/: demo.lystr  sample_song.lystr
src/: main.c  main.cpp  main_qt.cpp
src/ai/: NoteDetector.cpp  NoteDetector.h
src/audio/: AudioManager.cpp  AudioManager.h  MidiParser.cpp  MidiParser.h  QtAudioManager.cpp  QtAudioManager.h
src/common/: Types.h
src/core/: AndroidAssetManager.cpp  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  QtApplication.cpp  QtApplication.h  QtAssetManager.cpp  QtAssetManager.h  QtConfigManager.cpp  QtConfigManager.h  QtMidiParser.cpp  QtMidiParser.h  QtSettingsManager.cpp  QtSettingsManager.h  SettingsManager.cpp  SettingsManager.h
src/export/: FormatExporter.cpp  FormatExporter.h
src/gui/: KaraokeDisplay.cpp  KaraokeDisplay.h  ResourcePackGUI.cpp  ResourcePackGUI.h  TGUIEqualizer.cpp  TGUIEqualizer.h  TGUIKaraokeDisplay.cpp  TGUIKaraokeDisplay.h  TGUIKeybindEditor.cpp  TGUIKeybindEditor.h  TGUIResourcePackGUI.cpp  TGUIResourcePackGUI.h  TGUISongBrowser.cpp  TGUISongBrowser.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
src/gui/qt/: QtAudioSettings.cpp  QtAudioSettings.h  QtEqualizer.cpp  QtEqualizer.h  QtHelpSystem.h  QtKaraokeDisplay.cpp  QtKaraokeDisplay.h  QtKeybindEditor.cpp  QtKeybindEditor.h  QtLyricEditor.h  QtMainWindow.cpp  QtMainWindow.h  QtMidiEditor.h  QtResourcePackGUI.cpp  QtResourcePackGUI.h  QtSettings.h  QtSongBrowser.cpp  QtSongBrowser.h
src/scripting/: LystrInterpreter.cpp  LystrInterpreter.h  LystrParser.cpp  LystrParser.h
src/sync/: SynchronizationManager.cpp  SynchronizationManager.h
src/utils/: ErrorHandler.cpp  ErrorHandler.h  FileUtils.cpp  FileUtils.h  QtFileUtils.cpp  QtFileUtils.h  QtLogger.cpp  QtLogger.h  QtStringUtils.cpp  QtStringUtils.h
